Attempt to take a screenshot

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,7 @@
                         android:layout_alignStart="@+id/buttonNew"
                         android:layout_below="@+id/buttonErase"
                         android:contentDescription="@string/save"
+                        android:onClick="Save"
                         android:src="@drawable/save" />
 
                     <ImageButton
